Fix global homepage layout issue with more than 3 missions in "all missions" (which only appears when there are non-featured, complete, missions).

--- a/global/static/css/screen/homepage.css
+++ b/global/static/css/screen/homepage.css
@@ -68,6 +68,7 @@
 .homepage .all li:nth-child( 3n+1 ) {
     margin-left:            10px;
     padding-left:           0;
+    clear:                  left;
 }
 .homepage .all li:nth-last-child( n+4 ) {
     border-bottom-color:    #3c3b3d;
